# DataSift

./: .gitignore  README.md
backend/: CMakeLists.txt  main.cpp  package.json  powershell_env_startup.bat  readme_windows_webkit.txt
backend/app/: app.js  package-lock.json  package.json
backend/app/HTMLToMarkdown/: HTMLToMarkdown.js  Lexer.js  Parser.js
backend/app/public/HTMLToMarkdown/: HTMLToMarkdown.js
backend/app/public/NLP/: NLP.js
backend/app/public/mongodb/: mongodb.js
backend/app/public/prometheus/: prometheus.js
backend/app/routes/: datasift-p2p-incomingAPI.js  delete-by-id.js  get-by-id.js
documentation/: Documentation.md  datasift-p2p-incomingAPI.md  delete-by-id.md  get-by-id.md
frontend/: .gitignore  bun.lockb  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.html
frontend/src/components/: Navbar.tsx
frontend/src/interface/: App.tsx  index.html
frontend/src/pages/: Docs.json  Try.tsx
